public class Device
{
    public string ClientId { get; set; }
    public DeviceStatusType StatusId { get; set; }
    public DeviceType TypeId { get; set; }
    public string MacAdress { get; set; }
}