public class DeviceStatusResponse
{
    public Device Device { get; set; }
    public object Data { get; set; }
}