class SocketData
{
    public int Gpio { get; set; }
    public double Volt { get; set; }
}
