export enum DeviceType {
    Hub = 0,
    Socket = 1
}